<resources>
    <string name="app_name">Scula</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="Events">Events</string>
    <string name="favorites">Favorites</string>
    <string name="inbox">Inbox</string>
</resources>
