<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/house_outline"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/user"
            android:title="@string/profile"

            />
        <item
            android:id="@+id/nav_Events"
            android:icon="@drawable/event"
            android:title="@string/Events" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/like"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/email"
            android:title="@string/inbox"
            app:actionViewClass="android.widget.TextView"
            />
    </group>

    <group android:id="@+id/group_menu">
        <item android:id="@+id/nav_item_contact"
            android:title="Contact us"
            android:icon="@drawable/call"/>
        <item android:id="@+id/nav_item_feed"
            android:title="Feed back"
            android:icon="@drawable/write_letter"/>
        <item android:id="@+id/nav_item_setting"
            android:title="Setting"
            android:icon="@drawable/settings"/>
    </group>


    <group android:id="@+id/logout">
    <item android:id="@+id/nav_logout"
        android:title="Log Out"
        android:icon="@drawable/logout"/>
    </group>

</menu>
